[css] Small spacing fixes

--- a/assets/css/templates/_insert-slide.scss
+++ b/assets/css/templates/_insert-slide.scss
@@ -14,7 +14,7 @@
   font-weight: 400;
   line-height: calc(3vw + 0.75rem);
   font-size: calc(1vw + 1rem);
-  padding: 2.5rem 0;
+  padding: 2rem 0;
 }
 
 .grid__container--text__insertSlide {
