--- a/assets/css/templates/_services.scss
+++ b/assets/css/templates/_services.scss
@@ -2,6 +2,10 @@
 /* SERVICES PAGE */
 /* --------------------------------------------------------------------------- */
 
+.services main {
+    padding-bottom: 1.5rem;
+}
+
 .services .grid__item--entry {
     padding-top: 1rem;
     padding-bottom: 1rem;
